--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# Byte-compiled / optimized / DLL files
+# custom
+*.pdf
+
+ Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
